@@ -1,3 +1,7 @@
+2009-10-19 Add "use_clabeltext" option to clabel. If True, clabels 
+           will be created with ClabelText class, which recalculates
+           rotation angle of the label during the drawing time.
+
 2009-10-16 Make AutoDateFormatter actually use any specified
            timezone setting.This was only working correctly
            when no timezone was specified. - RMM
